feat: add first implementation of buyout API endpoints
